--- a/templates/mailer/index.html.twig
+++ b/templates/mailer/index.html.twig
@@ -1,20 +1,13 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Hello MailerController!{% endblock %}
-
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/msi/PhpstormProjects/mail/symfony-6-mailtrap/src/Controller/MailerController.php'|file_link(0) }}">src/Controller/MailerController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/msi/PhpstormProjects/mail/symfony-6-mailtrap/templates/mailer/index.html.twig'|file_link(0) }}">templates/mailer/index.html.twig</a></code></li>
-    </ul>
-</div>
-{% endblock %}
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+<h1>hello</h1>
+</body>
+</html>
